[package]
name = "etl-aws-utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etl-core = { path = "../etl-core" }
etl-s3 = { path = "../etl-s3" }
uuid = { version = "0.8.2", features = ["v4", "v1"] }
http = "0.2.4"
serde = { version = "1.0", features = ["derive"] }

rusoto_core = "0.47.0"
rusoto_athena = "0.47.0"
#rusoto_s3 = "0.47.0"
rusoto_credential = "0.47.0"
