[package]
name = "etl-core"
version = "0.1.19-a"
authors = ["Yuri Titov <ytitov@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.12", features = [ "time", "rt-multi-thread", "sync", "fs", "io-util", "macros"] }
futures-core = { version = "0.3" }
async-trait = { version = "0.1" }
serde_json = { version = "1.0" }
bytes = { version = "1", features = [ "serde" ] }

toml = { version = "0.4" }
csv = "1.1"
chrono = { version = "0.4", features = ["serde"]}


