[package]
name = "etl-grpc"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "dataoutput-server"
path = "src/bin/dataoutput-string-test-server.rs"

[dependencies]
etl-core = { path = "../etl-core" }
async-stream = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tonic = "0.7"
prost = "0.10"
prost-types = "0.10" # for well known types
bytes = "1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "net"] }
tokio-stream = { version = "0.1", features = ["net"] }

log = "0.4"
simple_logger = "2.1.0"

[build-dependencies]
tonic-build = "0.7"
