[package]
name = "etl-s3"
version = "0.1.22a"
authors = ["Yuri Titov <ytitov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["rustls"]
rustls = ["rusoto_core/rustls", "rusoto_s3/rustls"]

[dependencies]
http = "0.2.4"
etl-core = { path = "../etl-core" }
serde_json = { version = "1.0" }
csv = "1.1"
#aws stuff
rusoto_core = { version = "0.47.0", default-features = false }
rusoto_s3 = { version = "0.47.0", default-features = false }
rusoto_credential = "0.47.0"
bytes = "1"
regex = "1"

