[package]
name = "etl-sftp"
version = "0.1.0"
authors = ["Yuri Titov <ytitov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = { "version" = "0.9.1" }
etl-core = { path = "../etl-core" }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.0.0-beta.2" }

[[bin]]
name = "test_connection"
path = "bin/test-connection.rs"
