[package]
name = "etl-sftp"
version = "0.1.0"
authors = ["Yuri Titov <ytitov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = { "version" = "0.9.1" }
etl-core = { path = "../etl-core" }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.0.14", features = ["derive"] }

[[example]]
name = "test_connection"
path = "examples/test-connection.rs"
