[package]
name = "mllp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etl-core = { path = "../etl-core" }
etl-grpc = { path = "../etl-grpc" }
hl7-mllp-codec = { path = "../hl7-mllp-codec" }
simple_logger = "2.1.0"
tokio-util = {version="0.6.7", features=["codec"]}
futures = { version = "0.3" }
